--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
    <div class="container">
       <p class="copy">&copy; {{ site.time | date: '%Y' }}
       <a href="https://dcryan.com">DC Ryan</a>, Powered by
-      <a href="http://jekyllrb.com">Jekyll </a>, Theme originated from
+      <a href="http://jekyllrb.com">Jekyll </a>, Theme from
       <a href="https://github.com/brianmaierjr/long-haul"> Long Haul.</a>
 
       <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
