--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -906,6 +906,7 @@ dd {
         margin:0 auto 1.5em
     }
     #home .pageTitle {
+        font-family: Georgia;
         margin:2rem auto 1em
     }
     .header {
