--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,11 @@
 <div class="footer">
    <div class="container">
       <p class="copy">&copy; {{ site.time | date: '%Y' }}
-      <a href="https://dcryan.com">DC Ryan</a>, Powered by
-      <a href="http://jekyllrb.com">Jekyll </a>, Theme from
-      <a href="https://github.com/brianmaierjr/long-haul"> Long Haul.</a>
-
+      <a href="https://dcryan.com">Ryan</a>, 由
+      <a href="http://jekyllrb.com">Jekyll & Github 驱动。</a>
       <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-      <span id="busuanzi_container_site_pv"> Site visits:
-          <span id="busuanzi_value_site_pv"></span>, powered by<a href="http://busuanzi.ibruce.info/"> busuanzi</a>
-      </span>
-
+      <span id="busuanzi_container_site_pv"> 访问量:
+          <span id="busuanzi_value_site_pv"></span>
       </p>
 
       <div class="footer-links">
