--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <div class="footer">
    <div class="container">
       <p class="copy">&copy; {{ site.time | date: '%Y' }}
-      <a href="https://dcryan.com">Ryan</a>, 由
-      <a href="http://jekyllrb.com">Jekyll & Github 驱动。</a>
+      Ryan 文章版权 , 由 Jekyll & Github 驱动。
       <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
       <span id="busuanzi_container_site_pv"> 访问量:
           <span id="busuanzi_value_site_pv"></span>
